--- a/src/app/features/dashboard/seeker/seeker-dashboard.component.html
+++ b/src/app/features/dashboard/seeker/seeker-dashboard.component.html
@@ -54,8 +54,12 @@
         <i class="fas fa-user"></i>
         <span>My Profile</span>
       </a>
+      <a routerLink="applied-jobs" routerLinkActive="active" class="nav-item" (click)="onNavItemClick()">
+        <i class="fas fa-paper-plane"></i>
+        <span>My Applications</span>
+      </a>
       <a routerLink="resume" routerLinkActive="active" class="nav-item" (click)="onNavItemClick()">
-        <i class="fas fa-plus-circle"></i>
+        <i class="fas fa-file-alt"></i>
         <span>Resume</span>
       </a>
       <!-- DEFERRED AFTER MVP -->
